# Virealis

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/glad/: glad.h
include/virealis/Components/: CameraComponentManager.hpp  MaterialComponentManager.hpp  MeshComponentManager.hpp  TransformComponentManager.hpp
include/virealis/Core/: Entity.hpp  EntityManager.hpp
include/virealis/Math/: Constants.hpp  Matrix4x4.hpp  Vector2.hpp  Vector3.hpp
include/virealis/Rendering/: Shader.hpp
include/virealis/Scene/: Scene.hpp
include/virealis/Systems/: RenderingSystem.hpp
src/Components/: CameraComponentManager.cpp  MaterialComponentManager.cpp  MeshComponentManager.cpp  TransformComponentManager.cpp
src/Core/: EntityManager.cpp
src/Math/: Matrix4x4.cpp
src/Rendering/: Shader.cpp
src/Scene/: Scene.cpp
src/Systems/: RenderingSystem.cpp
src/glad/: glad.c
